@@ -16,3 +16,4 @@ Add:
     9. Adicionado telefone na tela de cadastro, pendente de validação de máscara. Adicionado o envio dos dados de cadastro do usuário ao modelo de bancos não relacional
         cloud firestore. Algumas melhorias de layout entre outros.
     10. Recuperando dados  do usuários, de forma manual e geral.
+    11. Adicionado máscaras e validações para telefone, cpf e cnpj. Incluido também algumas melhorias nas mensagens das snaacksbars.
